ATLAS-232: Search possibilities for lines, use object to pass restrictions